# coding_finance

./: .pdm-python  README.md  automated_quant_db.ipynb  coding_finance_env_activate.sh  git_ssh_activate.sh  market_data.sqlite  pip_list.txt  pyproject.toml  requirements.txt  venv_activate.sh
.venv_legacy/: pip_list.txt
Exercises/: download_stock_prices_yahoo.ipynb  fama_french.ipynb  fama_french_csv.ipynb  fama_french_functions.ipynb  file_one.py  file_one_to_two.py  pandas_data_analysis_basic.ipynb  perf_attrib.ipynb
Exercises/fama-french/: fama_french.ipynb  fama_french_csv.ipynb
Exercises/fama-french SPUS/: fama_french_spus.ipynb  fama_french_spus.py
Exercises/ptf_analysis/: dc_factor_models.ipynb  dc_pyfolio.ipynb  portfolio_buy_and_hold.ipynb  ptf_analysis_ai.ipynb  ptf_analysis_dc.ipynb  test.ipynb  test_pyfolio.ipynb
Exercises/various/: datacamp_joining_data_with_pandas.ipynb  datacamp_manipulate_ts_data.ipynb  download_stock_prices_yahoo.ipynb  fibonacci_test.ipynb  market_data.py  test_common_repo.ipynb  time_value_of_money.ipynb
Exercises/webscraping/: guide.md  weather_data.ipynb
Experiments/: pyfolio.ipynb  pyfolio_single_stock_vs_bench.ipynb  pyfolio_zipline_algo.ipynb
Webscraping/: guide2.md  wikipedia_visits_bitcoin.ipynb
data/: ftw_spx_2024.csv  spus_2024.csv
fama-french/: fama_french.ipynb  fama_french_csv.ipynb  spus_fama-french_analysis_2024.ipynb
fama-french SPUS/: fama_french_ftw.ipynb
fama-french SPUS/data/: coefficients.csv  p_values.csv  spus_2024.csv
output/: coefficients.csv  p_values.csv
ptf_analysis/: dc_pyfolio.ipynb  portfolio_buy_and_hold.ipynb  ptf_analysis_ai.ipynb  ptf_analysis_dc.ipynb  test_pyfolio.ipynb
various/: ewma_vol_beta.ipynb  file_two.py  webscraping.py  yfinance_tutorial.ipynb
