[project]
name = "coding_finance"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "phil71x", email = "phil71x@live.com"},
]
dependencies = [
    "numpy<2.0",
    "pandas",
    "matplotlib>=3.3.0",
    "seaborn>=0.11.0",
    "numpy-financial",
    "python-dateutil==2.8.2",
    "pytz==2023.3.post1",
    "six==1.16.0",
    "tzdata==2023.3",
    "beautifulsoup4",
    "statsmodels",
    "yfinance",
    "ipykernel>=6.29.5",
    "jupyter>=1.0.0",
    "pyfolio-reloaded>=0.9.7",
]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
