[project]
name = "coding_finance"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "phil71x", email = "phil71x@live.com"},
]
dependencies = [
    "numpy>=2.0.2",
    "pandas>=2.2.2",
    "matplotlib>=3.9.2",
    "statsmodels>=0.14.4",
    "pandas-datareader>=0.10.0",
    "yfinance>=0.2.54",
]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false
python_use_pyenv = false
# python_path = "C:/Users/phil7/OneDrive/Code/coding_finance/.venv/Scripts/python.exe"

[tool.pdm.dev-dependencies]
vscode = [
    "ipykernel>=6.29.5"
    ]
# common = {path = "../common", develop = true}
dev = [
    "black>=24.8.0",
    "pylint>=3.2.7",
]

[tool.pylint.format]
# Compatibility with black
max-line-length = "88"
